# pycal_notepad-plus-plus

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: CI_build.yml
src/: entry.h  library.cpp  library.h  library.rc  npp_msgs.h  resource.h  sci_position.h  scintilla.h  worker.cpp  worker.h
